[project]
name = "configly"
version = "0.1.0"
description = "Zero-boilerplate configuration management with env vars, validation, and secrets"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Teja"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis", "pyyaml", "tomli;python_version<\"3.11\""]

[tool.setuptools.packages.find]
where = ["src"]
